--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "aws-cdk": "2.0",
+    "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "mongodb": "^4.8.1",
     "next": "latest",
     "react": "^18.2.0",
