--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.301.0",
     "aws-cdk": "2.0",
+    "aws-sdk": "^2.1345.0",
     "express": "^4.18.2",
     "express-fileupload": "^1.4.0",
     "mongodb": "^4.8.1",
