--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@auth0/nextjs-auth0": "^2.4.0",
     "@aws-sdk/client-s3": "^3.301.0",
+    "@reduxjs/toolkit": "^1.9.3",
     "aws-cdk": "2.0",
     "aws-sdk": "^2.1345.0",
     "express": "^4.18.2",
@@ -15,7 +16,9 @@
     "mongodb": "^4.8.1",
     "next": "latest",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-qr-code": "^2.0.11",
+    "react-redux": "^8.0.5"
   },
   "devDependencies": {
     "@types/node": "18.7.5",
